--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     "@angular/platform-browser": "~10.0.6",
     "@angular/platform-browser-dynamic": "~10.0.6",
     "@angular/router": "~10.0.6",
+    "@datorama/akita": "^5.2.1",
+    "@datorama/akita-ng-entity-service": "^5.0.0",
     "@datorama/akita-ngdevtools": "^5.0.3",
+    "akita-ng-fire": "^1.5.13",
     "primeicons": "^4.0.0",
     "primeng": "^10.0.0-rc.1",
     "rxjs": "~6.5.5",
@@ -31,6 +34,7 @@
     "@angular-devkit/build-angular": "~0.1000.5",
     "@angular/cli": "~10.0.5",
     "@angular/compiler-cli": "~10.0.6",
+    "@datorama/akita-ngdevtools": "^5.0.1",
     "@types/node": "^12.11.1",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
@@ -46,5 +50,10 @@
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "~3.9.5"
+  },
+  "akitaCli": {
+    "customFolderName": "true",
+    "template": "ts",
+    "basePath": "./src/app/"
   }
 }
